Closed Bug 348317 Opened 18 years ago Closed 18 years ago

tweakers.net shows black parts/boxes

Categories

(Core :: Graphics, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: g.teunis, Assigned: vlad)

References

()

Details

(Keywords: regression)

Attachments

(1 file)

User-Agent:       Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20060810 Minefield/3.0a1
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20060810 Minefield/3.0a1

www.tweakers.net shows some black boxes, making some content not visible.


Reproducible: Always

Steps to Reproduce:
1. Browse to www.tweakers.net
2.
3.

Actual Results:  
A tall black box is shown on the right of the page and a smaller one in one of the headers.

Expected Results:  
Correctly displayed tweakers.net page.

I think this is a regression from the latest GFX perf tweaks
(Bug #343655 or Bug #342366)
Summary: tweakers.net shows black parts → tweakers.net shows black parts/boxes
Component: General → GFX: Thebes
Product: Firefox → Core
QA Contact: general → thebes
Version: unspecified → Trunk
I'll check which one it was later tonight
Status: UNCONFIRMED → NEW
Ever confirmed: true
Confirmed...even after the fix for bug 348191. When you scroll down then back up most of it disappears. And the image is a .gif also so this may be related to one of the older .gif bugs
(In reply to comment #2)
> And the image is a .gif also so this may be related
> to one of the older .gif bugs

This one is new in the last 2 nightlies, never encountered it before.
(the site is one of the biggest IT newssites in the Netherlands). 

bug 348191 caused this
Blocks: 348191
a long time ago that c&P failed me
bug 343655 caused this(In reply to comment #4)
> bug 348191 caused this
> 
strike previous, poor C&P action at my end
bug 343655 caused this
Blocks: 343655
No longer blocks: 348191
343655 probably did, but I'm stumped as to why; both images are rendered correctly /sometimes/, whereas the changes in 343655 should pretty much either cause misrendering all the time or never.  A small testcase would be useful; I can't reproduce the problem with the images themselves, just with that whole page.  I'll keep looking at this.
Assignee: nobody → vladimir
Status: NEW → ASSIGNED
any clue how to set up a testcase for this Martijn ?
Attached patch call NewPath()Splinter Review
You'd think that after having made this same mistake 10x times, I'd have caught all of them by now.. grr.  This should fix this site, and also should fix a whole bunch of other random "area of page is filled with solid color" bugs that I'm surprised noone has reported today. :)
Attachment #233288 - Flags: review?(pavlov)
Attachment #233288 - Flags: review?(pavlov) → review+
Checked in.
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.9a1) Gecko/20060811 Minefield/3.0a1 ID:2006081114 [cairo]

verified/fixed for the tweakers.net case
maybe it would've been better to make Fill() etc clear the path?
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: