b=348317, black (or other solid color) parts/boxes on certain web pages, r=me/stuart